# accounting

accounting-python/: .gitignore  build-dev-enviornment.sh  build-multipass.sh  compute_budjet.py  dev.arm64.Dockerfile  final_income_tax_return.py  init.sh  parse_meisai_pdf.py  pyproject.toml
accounting-python/tests/: test_accounting_python.py
accounting-rust/: build-dev-enviornment.sh  dev.arm64.Dockerfile
accounting-rust/accounting/: Cargo.toml
accounting-rust/accounting/src/: lib.rs
accounting-rust/sample_data/: income_xxxx.csv
python/: final_income_tax_return.py  test_final_income_tax_return.py
