[tool.poetry]
name = "accounting-python"
version = "0.1.0"
description = ""
authors = ["tsukudamayo <tsukudamayo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.21.5"
pandas = "^1.2.4"
pdfminer.six = "^v20231228"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
extraPaths = [".venv/lib/python3.12/site-packages/"]